<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="@dimen/dialogContentWidth"
        android:layout_height="@dimen/dialogContentHeight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/types"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/yearText"
        android:layout_width="@dimen/dialogContentWidth"
        android:layout_height="@dimen/dialogContentHeight"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeSpinner" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dialogButtonClear"
        app:layout_constraintStart_toStartOf="@+id/yearText"
        app:layout_constraintTop_toBottomOf="@+id/yearText" />

    <Button
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dialogButtonFilter"
        app:layout_constraintEnd_toEndOf="@+id/yearText"
        app:layout_constraintTop_toBottomOf="@+id/yearText" />
</androidx.constraintlayout.widget.ConstraintLayout>