...
    <string name="added_to_favorits">Added to favorits</string>
    <string name="removed_to_favorits">Removed from favorits</string>
    <string name="new_releases">New Releases</string>
    <string name="searchtext_dashboard">Search</string>
    <string name="favoritestext_dashboard">Favorites</string>
    <string name="newReleasestext_dashboard">New releases</string>
    <string name="dialogButtonClear">Clear</string>
    <string name="dialogButtonFilter">Filter</string>
    <string name="descriptionDetails">Description</string>
    <string name="castDetails">Cast</string>
    <string name="imdbRatingDetails">ImDB-rating</string>
    <string name="extraInformationDetails">Extra information</string>
    <string name="added_to_watchlist">Added to watchlist</string>
    <string name="removed_from_watchlist">Removed from watchlist</string>
...
