<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.mymovies.screens.search.SearchViewModel" />
    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.search.SearchFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="265dp"
            android:layout_height="53dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            
            android:hint="@string/searchTextview"
            android:inputType="textNoSuggestions|textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/filterButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movies_series_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchEditText"
            app:listData="@{viewModel.movieSerieList}"
            app:spanCount="3"
            tools:listitem="@layout/movie_serie_view_item_grid" />

        <ImageView
            android:id="@+id/status_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchEditText"
            app:layout_constraintVertical_bias="0.414"
            apiStatus="@{viewModel.status}"/>

        <Button
            android:id="@+id/filterButton"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/ic_filter"
            app:layout_constraintBottom_toBottomOf="@+id/searchEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/searchEditText"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>